syntax = "proto3";
package bze.rewards;

import "gogoproto/gogo.proto";

option go_package = "github.com/bze-alphateam/bze/x/rewards/types";

message StakingReward {
  string reward_id = 1;
  string prize_amount = 2;
  string prize_denom = 3;
  string staking_denom = 4;
  uint32 duration = 5;
  uint32 payouts = 6;
  uint64 min_stake = 7;
  uint32 lock = 8;
  string staked_amount = 9; // T
  string distributed_stake = 10; // S
}

message StakingRewardParticipant {
  string address = 1;
  string reward_id = 2;
  string amount = 3; // stake[address]
  string joined_at = 4; // S0[address]
}

message PendingUnlockParticipant {
  string index = 1;
  string address = 2;
  string amount = 3;
  string denom = 4;
}


message TradingReward {
  string reward_id = 1;
  string prize_amount = 2;
  string prize_denom = 3;
  uint32 duration = 4;
  string market_id = 5;
  uint32 slots = 6;
  uint32 expire_at = 7;
}

message TradingRewardExpiration {
  string reward_id = 1;
  uint32 expire_at = 2;
}

message TradingRewardLeaderboard {
  string reward_id = 1;
  repeated TradingRewardLeaderboardEntry list = 2 [(gogoproto.nullable) = false];
}

message TradingRewardLeaderboardEntry {
  string amount = 1;
  string address = 2;
  int64 created_at = 3;
}

message TradingRewardCandidate {
  string reward_id = 1;
  string amount = 2;
  string address = 3;
}

message MarketIdTradingRewardId {
  string reward_id = 1;
  string market_id = 2;
}
